# cplussamples

./: CMakeLists.txt  README.md  bash.md  boost.md  docker.md  docker_file.md  docker_repository.md  main.cpp
Testing/: TAG
Testing/20201005-0834/: Test.xml
Testing/Temporary/: LastCoverage_20201005-0834.log.tmp
include/: static.h  structures.h
statics/: static.cpp
sublogics/: sublogic1.cpp  sublogic1.h
test/: CMakeLists.txt  test1.cpp
